--- a/src/Components/HeroSection.css
+++ b/src/Components/HeroSection.css
@@ -3,8 +3,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  margin-top: 45px;
-  height: calc(100vh - 45px);
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -26,7 +25,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.6); /* Musta kerros 50% läpinäkyvyydellä */
   z-index: 1; /* Overlay kerros */
 }
