change images to .webp

--- a/src/Components/pages/Info.css
+++ b/src/Components/pages/Info.css
@@ -1,5 +1,5 @@
 .info-container {
-  background-image: url('/src/images/WEB_Technology.jpg');
+  background-image: url('/src/images/WEB_Technology.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
