--- a/src/Components/pages/Products.css
+++ b/src/Components/pages/Products.css
@@ -1,5 +1,5 @@
 .products-container {
-  background-image: url('/src/images/background-image11.jpg');
+  background-image: url('/src/images/background-image11.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
