--- a/src/Components/HeroSection.css
+++ b/src/Components/HeroSection.css
@@ -1,5 +1,5 @@
 .hero-container {
-  background-image: url('/src/images/background-image4.jpg');
+  background-image: url('/src/images/background-image4.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
