--- a/src/Components/pages/Contact.css
+++ b/src/Components/pages/Contact.css
@@ -1,5 +1,5 @@
 .contact-container {
-  background-image: url('/src/images/background-image9.jpg');
+  background-image: url('/src/images/background-image9.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
