--- a/src/Components/pages/Contact.css
+++ b/src/Components/pages/Contact.css
@@ -3,7 +3,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: calc(100vh - 75px);
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
