--- a/src/Components/pages/Products.css
+++ b/src/Components/pages/Products.css
@@ -9,7 +9,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 75px;
 }
 
 .products-overlay {
@@ -17,7 +16,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.55); /* Musta kerros 50% läpinäkyvyydellä */
   z-index: 1; /* Overlay kerros */
 }
