--- a/src/Components/pages/Info.css
+++ b/src/Components/pages/Info.css
@@ -16,7 +16,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.45); /* Musta kerros 50% läpinäkyvyydellä */
   z-index: 1; /* Overlay kerros */
 }
