--- a/src/Components/HeroSection.css
+++ b/src/Components/HeroSection.css
@@ -1,5 +1,5 @@
 .hero-container {
-  background-image: url('/src/images/background-image4.webp');
+  background-image: url('/src/images/robot.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -11,7 +11,7 @@
   align-items: center;
 }
 
-.hero-container > h1 {
+.hero-container>h1 {
   font-family: "Zen Dots", sans-serif;
   color: white;
   font-size: 40px;
@@ -20,7 +20,7 @@
   text-align: center;
 }
 
-.hero-container > h1 > strong {
+.hero-container>h1>strong {
   font-size: 25px;
   font-family: "montserrat", serif;
 }
@@ -31,18 +31,20 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.6); /* Musta kerros 50% läpinäkyvyydellä */
-  z-index: 1; /* Overlay kerros */
+  background-color: rgba(0, 0, 0, 0.6);
+  /* Musta kerros 50% läpinäkyvyydellä */
+  z-index: 1;
+  /* Overlay kerros */
 }
 
 @media (max-width: 475px) {
-  .hero-container > h1 {
+  .hero-container>h1 {
     font-size: 30px;
   }
 }
 
 @media (max-width: 370px) {
-  .hero-container > h1 {
+  .hero-container>h1 {
     font-size: 25px;
   }
 }
